; ModuleID = '/home/carl/AnghaBench/darwin-xnu/osfmk/kern/extr_test_lock.c_init_test_mtx_stats.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/osfmk/kern/extr_test_lock.c_init_test_mtx_stats.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, i32 }

@test_mtx_stats_grp_attr = common dso_local global i32 0, align 4
@test_mtx_stats_grp = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [18 x i8] c"testlck_stats_mtx\00", align 1
@test_mtx_stats_attr = common dso_local global i32 0, align 4
@enabled = common dso_local global i32 0, align 4
@TRUE = common dso_local global i32 0, align 4
@TEST_MTX_MAX_STATS = common dso_local global i32 0, align 4
@lck_mtx_test_stats = common dso_local global %struct.TYPE_3__* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @init_test_mtx_stats to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @init_test_mtx_stats() #0 {
  %1 = alloca i32, align 4
  %2 = call i32 @lck_grp_attr_setdefault(i32* @test_mtx_stats_grp_attr)
  %3 = call i32 @lck_grp_init(i32* @test_mtx_stats_grp, i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str, i64 0, i64 0), i32* @test_mtx_stats_grp_attr)
  %4 = call i32 @lck_attr_setdefault(i32* @test_mtx_stats_attr)
  %5 = load i32, i32* @TRUE, align 4
  %6 = call i32 @atomic_store(i32* @enabled, i32 %5)
  store i32 0, i32* %1, align 4
  br label %7

7:                                                ; preds = %28, %0
  %8 = load i32, i32* %1, align 4
  %9 = load i32, i32* @TEST_MTX_MAX_STATS, align 4
  %10 = icmp slt i32 %8, %9
  br i1 %10, label %11, label %31

11:                                               ; preds = %7
  %12 = load %struct.TYPE_3__*, %struct.TYPE_3__** @lck_mtx_test_stats, align 8
  %13 = load i32, i32* %1, align 4
  %14 = sext i32 %13 to i64
  %15 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %12, i64 %14
  %16 = call i32 @memset(%struct.TYPE_3__* %15, i32 0, i32 4)
  %17 = load %struct.TYPE_3__*, %struct.TYPE_3__** @lck_mtx_test_stats, align 8
  %18 = load i32, i32* %1, align 4
  %19 = sext i32 %18 to i64
  %20 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %17, i64 %19
  %21 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %20, i32 0, i32 1
  store i32 -1, i32* %21, align 4
  %22 = load %struct.TYPE_3__*, %struct.TYPE_3__** @lck_mtx_test_stats, align 8
  %23 = load i32, i32* %1, align 4
  %24 = sext i32 %23 to i64
  %25 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %22, i64 %24
  %26 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %25, i32 0, i32 0
  %27 = call i32 @lck_spin_init(i32* %26, i32* @test_mtx_stats_grp, i32* @test_mtx_stats_attr)
  br label %28

28:                                               ; preds = %11
  %29 = load i32, i32* %1, align 4
  %30 = add nsw i32 %29, 1
  store i32 %30, i32* %1, align 4
  br label %7

31:                                               ; preds = %7
  ret void
}

declare dso_local i32 @lck_grp_attr_setdefault(i32*) #1

declare dso_local i32 @lck_grp_init(i32*, i8*, i32*) #1

declare dso_local i32 @lck_attr_setdefault(i32*) #1

declare dso_local i32 @atomic_store(i32*, i32) #1

declare dso_local i32 @memset(%struct.TYPE_3__*, i32, i32) #1

declare dso_local i32 @lck_spin_init(i32*, i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
